--- a/pom.xml
+++ b/pom.xml
@@ -197,5 +197,11 @@
       <artifactId>jersey-mvc-jsp</artifactId>
       <version>${jersey.version}</version>
     </dependency>
+
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.3.1</version>
+    </dependency>
   </dependencies>
 </project>
