DAO Layer, first commit

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -22,6 +22,7 @@
     <param-name>contextConfigLocation</param-name>
     <param-value>
       classpath:/ctx-config.xml
+      classpath:/ctx-dao.xml
     </param-value>
   </context-param>
   
