--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>lu.hitec.pssu</groupId>
   <artifactId>DISP-MELM</artifactId>
@@ -202,6 +203,13 @@
       <groupId>commons-fileupload</groupId>
       <artifactId>commons-fileupload</artifactId>
       <version>1.3.1</version>
+    </dependency>
+
+    <!-- Should we keep this dependency ? -->
+    <dependency>
+      <groupId>lu.hitec.common</groupId>
+      <artifactId>mapelementservice-dto</artifactId>
+      <version>1.12.1</version>
     </dependency>
   </dependencies>
 </project>
