--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -22,7 +22,8 @@
     <param-name>contextConfigLocation</param-name>
     <param-value>
       classpath:/ctx-config.xml
-<!--       classpath:/ctx-dao.xml -->
+      classpath:/ctx-dao.xml
+      classpath:/ctx-persistence.xml
     </param-value>
   </context-param>
   
