--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
+<web-app version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 
   <!-- =================================== === General things =================================== -->
 
@@ -11,8 +12,8 @@
 
   <!-- =================================== === SPRING =================================== -->
 
-  <!-- Start the Spring listener that loads the application context when the Web app starts up. It assumes the context is named WEB-INF/applicationContext.xml unless you set a context param called contextConfigLocation 
-    to override it. -->
+  <!-- Start the Spring listener that loads the application context when the Web app starts up. It assumes the context is named WEB-INF/applicationContext.xml 
+    unless you set a context param called contextConfigLocation to override it. -->
   <listener>
     <description>Starts Spring listener to load app context</description>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
@@ -25,7 +26,7 @@
 <!--       classpath:/ctx-dao.xml -->
     </param-value>
   </context-param>
-  
+
   <filter>
     <filter-name>jersey-spring</filter-name>
     <filter-class>org.glassfish.jersey.servlet.ServletContainer</filter-class>
