--- a/src/main/webapp/WEB-INF/db.properties
+++ b/src/main/webapp/WEB-INF/db.properties
@@ -1,5 +1,5 @@
 db.driver=org.postgresql.Driver
-db.url=jdbc:postgresql://localhost/pssu_melmservice
+db.url=jdbc:postgresql://localhost/disp-melm
 
 # NOTE: user/password are configured by "global" property file, outside of the webapp
 #db.username=DB_USER
