--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
   <properties>
     <schema.file>schema.ddl</schema.file>
     <schema.dir>resources/db</schema.dir>
-    <jersey.version>2.6</jersey.version>
+    <jersey.version>2.8</jersey.version>
     <spring.version>3.2.4.RELEASE</spring.version>
     <hibernate.version>4.3.4.Final</hibernate.version>
     <slf4j.version>1.7.6</slf4j.version>
@@ -233,9 +233,15 @@
     </dependency>
 
     <dependency>
-      <groupId>commons-fileupload</groupId>
-      <artifactId>commons-fileupload</artifactId>
-      <version>1.3.1</version>
+      <groupId>org.glassfish.jersey.media</groupId>
+      <artifactId>jersey-media-json-jackson</artifactId>
+      <version>${jersey.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.glassfish.jersey.media</groupId>
+      <artifactId>jersey-media-multipart</artifactId>
+      <version>${jersey.version}</version>
     </dependency>
 
     <dependency>
@@ -260,22 +266,20 @@
 
     <!-- Test JAX-RS Service -->
     <!-- Required only when you are using JAX-RS Client -->
-    <dependency>
-      <groupId>org.glassfish.jersey.core</groupId>
-      <artifactId>jersey-client</artifactId>
-      <version>${jersey.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>com.fasterxml.jackson.jaxrs</groupId>
-      <artifactId>jackson-jaxrs-json-provider</artifactId>
-      <version>2.3.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-core</artifactId>
-      <version>1.9.5</version>
-      <scope>test</scope>
-    </dependency>
+    
+    <!-- <dependency> -->
+    <!-- <groupId>org.glassfish.jersey.core</groupId> -->
+    <!-- <artifactId>jersey-client</artifactId> -->
+    <!-- <version>${jersey.version}</version> -->
+    <!-- </dependency> -->
+    
+    <!-- <dependency> -->
+    <!-- <groupId>org.mockito</groupId> -->
+    <!-- <artifactId>mockito-core</artifactId> -->
+    <!-- <version>1.9.5</version> -->
+    <!-- <scope>test</scope> -->
+    <!-- </dependency> -->
+    
     <dependency>
       <groupId>org.glassfish.jersey.test-framework.providers</groupId>
       <artifactId>jersey-test-framework-provider-jetty</artifactId>
