--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,23 +11,7 @@
     <welcome-file>index.html</welcome-file>
   </welcome-file-list>
 
-  <!-- =================================== === Log4j / Spring =================================== -->
-
-  <!-- Configures log4j through Spring -->
-  <listener>
-    <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
-  </listener>
-
-  <context-param>
-    <param-name>log4jConfigLocation</param-name>
-    <param-value>file:///D:/dev/git/DISP-MELM/src/test/resources/log4j.xml</param-value>
-  </context-param>
-
-  <!-- disables log file locations relative to the context path, and prevents problems when multiple webapps use the spring log4j config setup -->
-  <context-param>
-    <param-name>log4jExposeWebAppRoot</param-name>
-    <param-value>false</param-value>
-  </context-param>
+  <!-- =================================== === SPRING =================================== -->
 
   <listener>
     <description>Starts Spring listener to load app context</description>
