--- a/src/main/webapp/WEB-INF/db.properties
+++ b/src/main/webapp/WEB-INF/db.properties
@@ -1,9 +1,9 @@
 db.driver=org.postgresql.Driver
-db.url=jdbc:postgresql://localhost/disp-melm
 
 # NOTE: user/password are configured by "global" property file, outside of the webapp
 #db.username=DB_USER
 #db.password=DB_PASSWORD
+#db.url=jdbc:postgresql://localhost/DB_NAME
 
 datasource.dialect=org.hibernate.dialect.PostgreSQLDialect
 datasource.formatsql=false
