--- a/bower.json
+++ b/bower.json
@@ -8,8 +8,10 @@
   "dependencies": {
     "angular": "1.2.x",
     "angular-xeditable": "0.1.8",
+    "angular-file-upload": "0.5.7",
+	"angular-ui-bootstrap-bower": "0.11.0",
     "bootstrap": "3.1.x",
-    "es5-shim": "3.4.x",
-    "jQuery": "2.1.x"
+    "es5-shim": "2.1.0",
+    "jquery": "2.1.x"
   }
 }
