--- a/package.json
+++ b/package.json
@@ -5,13 +5,11 @@
   "dependencies": {},
   "devDependencies": {
     "grunt": "~0.4.1",
-    "grunt-bower-install": "^1.6.0",
-    "grunt-concat": "^0.1.6",
+    "grunt-bower-install-simple": "^0.9.2",
+    "grunt-bowercopy": "^1.0.0",
     "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-cssmin": "^0.9.0",
     "grunt-contrib-jshint": "~0.9.2",
     "grunt-contrib-less": "^0.11.1",
-    "grunt-contrib-sass": "^0.7.3",
     "grunt-contrib-uglify": "^0.4.0",
     "grunt-contrib-watch": "~0.5.3"
   },
