--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,29 @@
           </formats>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>com.cj.jshintmojo</groupId>
+        <artifactId>jshint-maven-plugin</artifactId>
+        <version>1.3.0</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>lint</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <version>2.4.1</version>
+          <options>devel,browser,jquery,globalstrict,laxbreak</options>
+          <globals>app,melmContextRoot</globals>
+          <directories>
+            <directory>src/main/webapp/js/custom</directory>
+          </directories>
+          <reporter>jslint</reporter>
+          <reportFile>target/jshint.xml</reportFile>
+          <failOnError>true</failOnError>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
@@ -266,20 +289,20 @@
 
     <!-- Test JAX-RS Service -->
     <!-- Required only when you are using JAX-RS Client -->
-    
+
     <!-- <dependency> -->
     <!-- <groupId>org.glassfish.jersey.core</groupId> -->
     <!-- <artifactId>jersey-client</artifactId> -->
     <!-- <version>${jersey.version}</version> -->
     <!-- </dependency> -->
-    
+
     <!-- <dependency> -->
     <!-- <groupId>org.mockito</groupId> -->
     <!-- <artifactId>mockito-core</artifactId> -->
     <!-- <version>1.9.5</version> -->
     <!-- <scope>test</scope> -->
     <!-- </dependency> -->
-    
+
     <dependency>
       <groupId>org.glassfish.jersey.test-framework.providers</groupId>
       <artifactId>jersey-test-framework-provider-jetty</artifactId>
